gcc/cp/init.c
@@ -860,6 +860,11 @@ perform_member_init (tree member, tree init)
 	}
       if (init == error_mark_node)
 	return;
+      if (DECL_SIZE (member) && integer_zerop (DECL_SIZE (member))
+	  && !TREE_SIDE_EFFECTS (init))
+	/* Don't add trivial initialization of an empty base/field, as they
+	   might not be ordered the way the back-end expects.  */
+	return;
       /* A FIELD_DECL doesn't really have a suitable lifetime, but
 	 make_temporary_var_for_ref_to_temp will treat it as automatic and
 	 set_up_extended_ref_temp wants to use the decl in a warning.  */
